--- a/_config.yml
+++ b/_config.yml
@@ -26,23 +26,23 @@ description: >- # used by seo meta and the atom feed
 url: ""
 
 github:
-  username: github_username # change to your github username
+  username: mcarter960 # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: arthurcarteron1 # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Arthur Carter
+  email: arthur@devops10.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/arthurcarteron1 # change to your twitter homepage
+    - https://github.com/mcarter960 # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    # - https://www.linkedin.com/in/arthurcarterlasvegas
 
 google_site_verification: # fill in to your verification string
 
