--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: America/Los_Angeles
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Devops10 # the main title
+title: Arthur Carter # the main title
 
-tagline: Devops10 Jekyll theme # it will display as the sub-title
+tagline: Project Manager | NOC Engineer | Field Technician # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
