--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: America/Los_Angeles
 
 title: Arthur Carter # the main title
 
-tagline: Project Manager | NOC Engineer | Field Technician # it will display as the sub-title
+tagline: Project Manager | NOC Engineer | Field Technician | Homelab # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
